# data-processing

./: .gitignore  404.html  README.md  config.yaml  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.py
.github/workflows/: ci.yaml  deploy.yml
api/core/: index.html
api/models/: index.html
api/stages/: index.html
api/utilities/: index.html
docs/: evalkit.md  index.md
docs/api/: core.md  models.md  stages.md  utilities.md
docs/examples/: basic-usage.md
docs/getting-started/: configuration.md  installation.md  quick-start.md
docs/pipeline-stages/: chunking.md  cleaning.md  deduplication.md  export.md  extraction.md  filters.md  metadata-extraction.md  pii-removal.md  qdrant.md
eve/: __init__.py  base_step.py  checkpoint.py  config.py  logging.py  pipeline.py  utils.py
eve/common/: __init__.py  http_utils.py  prompts.py  regex_patterns.py
eve/model/: __init__.py  document.py
eve/steps/: __init__.py
eve/steps/chunking/: __init__.py  chunker.py  chunker_step.py  custom_splitter.py
eve/steps/cleaning/: base_component.py  cleaning_step.py  latex_correction.py  nougat_artifact_removal.py  nougat_correction.py  nougat_helpers.py  ocr_corrections.py  ocr_duplicate_remover.py  processors.py  rule_based_corrections.py  standalone.py
eve/steps/dedup/: __init__.py  dedup_step.py  exact_duplicates.py  minhash.py
eve/steps/export/: __init__.py  export_step.py
eve/steps/extraction/: __init__.py  extract_step.py  htmls.py  jsonl.py  markdown.py  pdfs.py  xmls.py
eve/steps/filters/: __init__.py  compute_ppl.py  length_filter.py  newline_filter.py  perplexity.py  pii_filter.py  reference_filter.py
eve/steps/metadata/: __init__.py  db_logger.py  metadata_step.py  processors.py
eve/steps/metadata/extractors/: __init__.py  base_extractor.py  html_extractor.py  pdf_extractor.py  scholar_extractor.py
eve/steps/pii/: __init__.py  pii_processors.py  pii_step.py  server.py
eve/steps/qdrant/: __init__.py  qdrant_step.py
eve_pipeline/: __init__.py  cli.py  diagnostics.py
eve_pipeline/cleaning/: __init__.py  pipeline.py  processors.py
eve_pipeline/core/: __init__.py  base.py  batch_optimizer.py  config.py  enums.py  logging.py  model_manager.py  parallel_processor.py  pipeline.py  prompts.py  rate_limiter.py  resource_monitor.py  streaming_processor.py  utils.py
eve_pipeline/deduplication/: __init__.py  exact_deduplicator.py  lsh_deduplicator.py  pipeline.py
eve_pipeline/extraction/: __init__.py  base.py  csv_extractor.py  factory.py  html_extractor.py  pdf_extractor.py  text_extractor.py  xml_extractor.py
eve_pipeline/latex_correction/: __init__.py  pipeline.py
eve_pipeline/pii_removal/: __init__.py  client.py  processor.py  server.py
eve_pipeline/storage/: __init__.py  async_s3.py  base.py  factory.py  local.py  s3.py
examples/: chunking.yaml  cleaning.yaml  complete_filter_pipeline.yaml  end-to-end.yaml  length_filter.yaml  local_embeddings.yaml  metadata.yaml  near_duplicates.yaml  newline_filter.yaml  pdf_extraction.yaml  pii_filter.yaml  pipeline_1_embed_local.yaml  pipeline_2_filter_upload.yaml  process_and_upload.yaml  qdrant_comparison.yaml
examples/basic-usage/: index.html
getting-started/configuration/: index.html
getting-started/installation/: index.html
getting-started/quick-start/: index.html
pipeline-stages/chunking/: index.html
pipeline-stages/cleaning/: index.html
pipeline-stages/deduplication/: index.html
pipeline-stages/export/: index.html
pipeline-stages/extraction/: index.html
pipeline-stages/filters/: index.html
pipeline-stages/metadata-extraction/: index.html
pipeline-stages/pii-removal/: index.html
pipeline-stages/qdrant/: index.html
search/: search_index.json
server/: nougat_server.py  pii_server.py  qwen_embedder.py  setup_monkeyocr.sh  vllm.py
server/vllm_config/: qwen4b_embeddings.yaml
site/: 404.html  index.html  objects.inv
site/api/core/: index.html
site/api/models/: index.html
site/api/stages/: index.html
site/api/utilities/: index.html
site/examples/basic-usage/: index.html
site/getting-started/configuration/: index.html
site/getting-started/installation/: index.html
site/getting-started/quick-start/: index.html
site/pipeline-stages/cleaning/: index.html
site/pipeline-stages/deduplication/: index.html
site/pipeline-stages/export/: index.html
site/pipeline-stages/extraction/: index.html
site/pipeline-stages/metadata-extraction/: index.html
site/pipeline-stages/pii-removal/: index.html
site/search/: search_index.json
styles/: overrides.css
tests/: __init__.py  conftest.py
tests/test_core/: test_base.py  test_config.py
tests/test_deduplication/: __init__.py  test_exact_deduplicator.py
tests/test_steps/: create_files.py  test_cleaning.py  test_dedup.py  test_extraction.py  test_length_filter.py  test_metadata.py  test_pii.py
