[project]
name = "eve"
version = "0.1.0"
description = ""
requires-python = ">=3.10"
dependencies = [
    "aiofiles",
    "aiohttp",
    "loguru",
    "pydantic",
    "PyYAML",
    "trafilatura",
    "rapidfuzz>=3.0.0",
    "nltk>=3.8",
    "datasketch>=1.6.0",
    "pytest-asyncio==1.1.0",
    "fastapi>=0.118.2",
    "pypdfium2>=4.30.0",
    "torch>=2.8.0",
    "nougat-ocr>=0.1.17",
    "albumentations==1.0",
    "python-multipart>=0.0.20",
    "uvicorn>=0.37.0",
    "transformers==4.38.2",
    "litserve>=0.2.15",
    "flair>=0.15.1",
    "presidio-analyzer>=2.2.360",
    "pip>=25.2",
    "tqdm>=4.66.0",
    "langchain_text_splitters>=0.3.11",
    "hf_transfer",
    "qdrant-client==1.15.1",
    "hf-transfer>=0.1.9",
    "httpx>=0.28.1",
    "mkdocs-material>=9.7.0",
    "mkdocstrings-python>=1.18.2",
    "torch>=2.7.0",  # Downgrade from 2.8.0
    "pylatex>=1.4.0",
]

[project.scripts]
eve = "eve.pipeline:cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

